benetech/ServiceNet#969: Fix all jumping buttons

--- a/src/main/webapp/app/app.scss
+++ b/src/main/webapp/app/app.scss
@@ -93,3 +93,8 @@
     font-size: 1.25em;
   }
 }
+
+.btn:not(.disabled):hover {
+  margin-top: 0 !important;
+  border-bottom-width: 4px !important;
+}
